@@ -1,5 +1,9 @@
 2007-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
+	Correctly match / regexp matchers as first char on a line when
+	fontifying only that line.
+
 	* emacs-lisp/cl-macs.el (cl-transform-lambda): Preserve the match-data.
 
 2007-08-16  Glenn Morris  <rgm@gnu.org>
